--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -14,13 +14,46 @@
             <h1 class="h-glass">Data Science <br>And<br>Artificial Intelligence Inquisitive Club</h1>
            <div>
                 <br><h2>Vision<br>
+                    • Empowerment
+through Knowledge!
+• Our vision is to create a
+community that
+innovates and explores
+AI&DS.
+• We intent to make
+every student feel
+confident about their
+work and elevate their
+communication skill.
+Our aim is to
+motivate
+students to share
+their ideas and
+provide a platform
+for research
+purposes.
+• Acting as a
+platform where all
+the branches unite,
+connect and work together
 
-                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
                 <br><br>Mission<br>
 
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Dedicated efforts for confidence boosting.
+Yearning to promote research and skill
+enhancement.
+Persistent endeavor to imbibe practical
+knowledge.
+Inculcating the concept of Artificial
+Intelligence & Data Science.
+Treading the path to meet the future
+challenges
+Motivating and guiding students to participate
+in various research and development activities.
+Exposing the participants to practical and
+competitive environment to enhance their skill.
             </h2>
                    </div>
                       </div>
