--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -13,7 +13,7 @@
         <div class="glass">
             <h1 class="h-glass">Data Science <br>And<br>Artificial Intelligence Inquisitive Club</h1>
            <div>
-                <br><h2>Vision<br>
+                <br><br><h2>Vision<br>
                     • Empowerment
 through Knowledge!
 • Our vision is to create a
