--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -11,28 +11,28 @@
 
 <header>
         <div class="glass">
-            <h1 class="h-glass">Data Science <br>And<br>Artificial Intelligence Inquisitive Club</h1>
+            <h1 class="h-glass">Data Science <br>And<br>Artificial Intelligence Inquisitive Club<br></h1>
            <div>
                 <br><br><h2>Vision<br>
                     • Empowerment
 through Knowledge!
-• Our vision is to create a
+<br>• Our vision is to create a
 community that
 innovates and explores
 AI&DS.
-• We intent to make
+<br>• We intent to make
 every student feel
 confident about their
 work and elevate their
 communication skill.
-Our aim is to
+<br>Our aim is to
 motivate
 students to share
 their ideas and
 provide a platform
 for research
 purposes.
-• Acting as a
+<br>• Acting as a
 platform where all
 the branches unite,
 connect and work together
