--- a/dsaii/templates/article.html
+++ b/dsaii/templates/article.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container" >
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;">
-        <h1 style="font-weight: 600;"> {{post.title}}</h1>
-            <ul style="color: white;font-size: xx-large;">         By: {{post.author.first_name}} {{post.author.name.name}}</ul><br/>
-        <hr style="color: white;">
+ {% load static %}
 
-    <img src="{{ post.image.url }}" width="258" height="300"/>
+    <link rel="stylesheet" href="{% static 'article.css' %}"><br>
+<div class="container">
+    <div class="wrapper">
+        <div class="glass" style="width: 90%; color: white;">
 
-    <h3 style="color: white;">{{post.body}}</h3>
+      <br><br><h1 style="text-align: -webkit-center;font-weight: 600;color:white;"> {{post.title}}</h1>
+            <h3 style="color: white;text-align: center;font-size: xx-large;">By: {{post.author.first_name}} {{post.author.name.name}}</h3><br/>
+
+
+
+
+    <h4 style="color: white;">{{post.body|safe}}</h4>
         <br>
         <br>
         <br>
@@ -18,17 +23,22 @@
 {% else %}
         <a href="{% url 'addc' post.pk %}" button class="btn btn-secondary">Add Comment</a><br><br>
     {% for comments in post.comments.all %}
-<strong>
+<h4><strong>
         {{ comments.name }} -
         {{ comments.date_added }} :
 </strong>
-        {{comments.body}}<br><br>
+    {{comments.body}}</h4><br><br>
     {% endfor %}
 {% endif %}
         <br>
         <br>
 <br>
         <br>
-</div>
+
+    </div>
+    </div>
+    <br>
+    <br>
+    <br>
 </div>
 {% endblock %}
