--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -3,11 +3,17 @@
     <div class="container" style="text-align: center;">
       <h1 style="font: revert;font-size: xxx-large; color: white;">TEAM</h1>
     </div>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
 
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'team.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
+<body>
 <body>
 <div class="container" style="text-align: center;">
       <h1 style="font: revert;font-size: xxx-large; color: white;">TEAM</h1>
@@ -268,4 +274,5 @@
 <br>
 <br>
 <br>
+</body>
 {% endblock %}
