--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -1,3 +1,7 @@
+    {% load static %}
+
+
+
 <nav class="navbar navbar-expand-lg navbar-dark transparent" style="width: 100%;">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
