--- a/static/team.css
+++ b/static/team.css
@@ -41,14 +41,12 @@ section::before{
     position: relative;
     width: 300px;
     height: 400px;
-    background: inherit;
     margin :20px;
-    box-shadow: inset 0 0 0 200px rgba(225,225,225,0.3);
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(10 px);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
 }
 
 .container .card .content{
@@ -143,3 +141,5 @@ input[type="submit"]{
 
 input[type="submit"]:hover{
     background: #c0392b;
+    }
+
