--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -20,6 +20,19 @@
     </div>
     <section>
         <div class="container" style="top: 118px;">
+
+            <div class="card">
+                <div class="content">
+                    <div class="imgBox">
+                        <img src="/static/president.png">
+                     </div>
+                     <div class="contentBox">
+                         <br><h3>Dr. Dheeraj Agrawal<br><span>President</span></h3>
+                     </div>
+                </div>
+
+            </div>
+
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
