--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -27,7 +27,7 @@
                         <img src="/static/president.png">
                      </div>
                      <div class="contentBox">
-                         <br><h3>Dr. Dheeraj Agrawal<br><span>President</span></h3>
+                         <br><h3>Dr. Dheeraj Agrawal<br><span>Mentor</span></h3>
                      </div>
                 </div>
 
