--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -15,10 +15,10 @@
 
 <body>
 <body>
-<div class="container" style="text-align: center;">
+<div class="container" style="text-align: center; ">
       <h1 style="font: revert;font-size: xxx-large; color: white;">TEAM</h1>
     </div>
-    <section>
+0    <section>
         <div class="container" style="top: 118px;">
 
             <div class="card">
