--- a/static/login.css
+++ b/static/login.css
@@ -16,21 +16,13 @@
     overflow: hidden;
     margin-left: -175px;
     margin-top: -250px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
     }
 
-.wrapper: before{
-    width: 400px;
-    height: 550px;
-    content: "";
-    position: absolute;
-    top: -25px;
-    left: -25px;
-    bottom: 0;
-    right: 0;
-    background: inherit;
-    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.2);
-    filter: blur(10px);
-}
 
 form{
     text-align: center;
