--- a/static/events.css
+++ b/static/events.css
@@ -43,12 +43,15 @@ section::before{
     height: 400px;
     background: inherit;
     margin :20px;
-    box-shadow: inset 0 0 0 200px rgba(225,225,225,0.3);
     border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(10 px);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
 }
 
 .container .card .content{
