--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -10,17 +10,26 @@
     bottom: 0;
     right: 0;
     background: inherit;
-    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.2);
-    filter: blur(10px);">
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);">
     <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;
     position: absolute;
     left: 41%;
     top: 46%;
-    transform: translate(-50%, -50%);">
+    transform: translate(-50%, -50%);
+background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);">
 <h1 style="font-weight: 600;">BLOGS</h1>
-<ul>
+<ul >
 {% for post in object_list %}
-    <li style="font-size: x-large;font-weight: 400;"><a href = "{% url 'article' post.pk %}" button class="btn btn-secondary" style="font-size: medium;">{{post.title}}</a> - {{post.author.first_name}} - {{post.author.email}}<br/>
+
+    <li style="font-size: x-large;font-weight: 400;" ><a href = "{% url 'article' post.pk %}"  style="font-size: x-large; color : white;">{{post.title}}</a> - {{post.author.first_name}} <br/>
     {{post.title_tag}}</li>
 {% endfor %}
 </ul>
