--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -24,7 +24,7 @@
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/president.png">
+                        <img src="">
                      </div>
                      <div class="contentBox">
                          <br><h3>Dr. Dheeraj Agrawal<br><span>Mentor</span></h3>
