--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -24,7 +24,8 @@ background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255 , 255, 0.18);">
+    border: 1px solid rgba(255, 255 , 255, 0.18);
+border-radius: 15px;">
 <h1 style="font-weight: 600;">BLOGS</h1>
 <ul >
 {% for post in object_list %}
