--- a/static/article.css
+++ b/static/article.css
@@ -1,15 +1,16 @@
 
 
 .wrapper{
-    position: absolute;
+    position: relative;
     width: 85%;
     left: 115px;
-    top: 86px;
+    top: 126px;
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255 , 255, 0.18);
+    border-radius: 15px;
     display: flex;
     justify-content: center;
 
