--- a/static/nav.css
+++ b/static/nav.css
@@ -1,10 +1,100 @@
-@media screen and (max-width: 750px) {
-    nav{
-        position: fixed;
-        inset: 0 0 0 30%;
 
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hs1(0 0% 100% / 0.1);
-    }
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,700')
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+
 }
+
+.wrapper{
+    position:fixed;
+    top:0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    clip-path: circle(25px at calc(100% - 45px) 45px);
+    transition: all 0.3s ease-in-out;
+      background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
+
+}
+#active:checked ~ .wrapper{
+    clip-path: circle(75%);
+}
+
+.menu-btn{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 2;
+    text-align: center;
+    line-height: 50px;
+    height: 50px;
+    width: 50px;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+#active:checked ~ .menu-btn{
+    background: #fff;
+    color: #4158d8;
+}
+
+#active:checked ~ .menu-btn i:before{
+    content: "\f00d";
+}
+
+
+.wrapper ul{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+}
+.wrapper ul li{
+    margin: 15px 0;
+}
+
+.wrapper ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 500;
+    padding: 5px 50px;
+    position: relative;
+    transition: transform 0.3s ease;
+
+}
+
+.wrapper ul li a:after{
+    content: "";
+    position:absolute;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background:#fff;
+    border-radius: 50px;
+    transform: scaleY(0);
+    z-index: -1;
+    line-height: 50px;
+    transition: all 0.3s ease;
+}
+
+.wrapper ul li a:hover:after{
+    transform: scaleY(1);
+}
+
+.wrapper ul li a:hover{
+    color: #fff;
+}
+
