--- a/static/team.css
+++ b/static/team.css
@@ -5,8 +5,6 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 
-
-
 }
 
 body{
@@ -28,7 +26,7 @@ section::before{
 }
 
 .container{
-    position: absolute;
+    position: relative;
     z-index: 1;
     display: flex;
     justify-content: space-around;
