--- a/static/article.css
+++ b/static/article.css
@@ -19,6 +19,12 @@
 @media screen and (max-width: 750px) {
 .wrapper{
     left: 28px;
+    top:3px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
 }
 h1{
     text-align: -webkit-center;
