--- a/static/team.css
+++ b/static/team.css
@@ -26,7 +26,7 @@ section::before{
 }
 
 .container{
-    position: relative;
+    position: absolute;
     z-index: 1;
     display: flex;
     justify-content: space-around;
