--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: content-box; // 1
+}
+
 body{
     margin: 0;
     font-family: 'Lato', sans-serif;
@@ -24,6 +30,7 @@ nav .menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: content-box;
 }
 
 nav ul{
@@ -174,8 +181,8 @@ header h1{
         margin-top: 4em;
     }
      nav{
-        left: 55px;
-        top: 13px;
+        left: 29px;
+        top: 18px;
     }
 
     .glass h2{
