--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -24,7 +24,7 @@
                         <img src="">
                      </div>
                      <div class="contentBox">
-                         <br><h3>Prof Dheeraj Agrawal<br><span>IIIC and T&P</span></h3>
+                         <br><h3>Prof Dheeraj Agrawal<br><span>Dean IIIC and T&P</span></h3>
                      </div>
                 </div>
 
