--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body background="/static/work.png" style="background-size: cover;" >
+<body background="/static/spotbg.png" style="background-size: cover;" >
 {% include 'navigation.html' %}
   {% block content %}
 
