--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -1,6 +1,6 @@
     {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-dark transparent" style="width: 100%;">
+<nav class="navbar navbar-expand-lg navbar-dark transparent" style="width: 100%; background: hs1(0 0% 100% / 0.1);">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
