--- a/static/index.css
+++ b/static/index.css
@@ -1,189 +1,99 @@
-
-
 body{
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-}
-
-nav{
-    z-index: 99;
-    position: relative;
-    transition: 0.4s;
-}
-
-nav a{
-    text-decoration: none;
-    color: #1f1f1f;
-}
-
-nav .container{
-    max-width: 1150px;
-    padding: 1em 2em;
-    margin: 0 auto;
-}
-
-nav .menu{
-    display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    box-sizing: content-box;
+    flex-wrap: wrap;
+    min-height: 100vh;
 }
 
-nav ul{
-    list-style-type: none;
-    padding: 0;
-    display: inline-block;
-}
-
-nav ul li{
-    display: inline-block;
-    margin: 0 0.5em;
-}
-
-nav ul a{
-    font-size: 0.8em;
-    text-transform: uppercase;
-}
-
-nav .container .menu-btn{
-    display: none;
-}
-
-.social-media a{
-    font-size: 1em;
-}
-
-header{
-    height: 100vh;
-    position: relative;
-    background: center no-repeat fixed;
-    overflow: hidden;
-    background-size: cover;
-}
-
-header h1{
-    position: absolute;
-    font-size: clamp(1.5rem, 4vw + -0.5rem, 12rem);
-    letter-spacing: 5px;
-    font-weight: 700;
-    transform: translateY(-50%);
-    
-
-}
-
-.glass{
-    position: absolute;
-    width: 42%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255 , 255, 0.18);
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-
-}
-
-.h-glass{
-    background: url(work.png) center no-repeat fixed;
-    background-size: cover;
-    color: rgba(0,0,0,0.5);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0,0,0,0.5);
-    top: 33%;
-    right: 0;
-    animation: text1 0.8s easi-in forwards;
-    text-align: center;
-
-}
-
-.h-regular{
-    color: #fff;
-    top: 35%;
-    left: 42%;
-    animation: text2 0.8s ease-in forwards;
-    animation-delay: 500ms;
-
-}
-
-.glass > div{
-    display: flex;
-    justify-content: center;
-    box-sizing: border-box;
-    padding: 1.5em;
-}
-
-.glass > div div{
-    margin: 0 1em;
-}
-
-.glass p{
-    color: #ccc;
-    font-size: 0.9em;
-    line-height: 27px;
-    max-width: 27em;
-}
-
-.glass h2{
-    color: #fff;
-    font-size: medium;
-    font-weight: normal;
-}
-
-.glass a{
-    color: #fff;
-    text-decoration: none;
-}
-
-.glass a i{
-    margin-left: 0.2 em;
-}
-
-@media screen and (max-width: 750px) {
-
-
-    .glass{
-        width: 90%;
-        height: 90%;
-        min-height: 30em;
-        top: 48%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 15px;
+#main{
+        width:100%;
+        height: 80%;
+        top: 100px;
+        position: fixed;
+        overflow: hidden;
     }
-    
-    .h-glass{
-        right:0%;
-        top: 23%;
-        color: rgba(0,0,0,0.5);
-        background-attachment: initial;
-        background-size: 100% 130%;
-        font-size: x-large;
+    #box1{
+        width: 530px;
+        height: 625px;
+        background: url('bgbw.png') ;
+        position: absolute;
+        bottom: -100%;
+        left:30%;
+        animation: anim 2s forwards, anim2 3s forwards 3s;
+    }
+    #box1:after{
+        content: '';
+        position: absolute;
+        width: 530px;
+        height: 625px;
+        background: url('bgnor.png') ;
+        left: 0px;
+        z-index: -1;
     }
 
-    .h-regular{
-        text-align: -webkit-center;
-    top: 39%;
-    left: 14px;
-    font-size: larger;
+    @keyframes anim{
+        from{
+            bottom: -100%;
+        }
+        to{
+            bottom: 0%;
+        }
+    }
+    @keyframes anim2{
+        from{
+            left: 30%;
+            width: 530px;
+        }
+        to{
+            width: 0px;
+            left: 50%;
+        }
     }
 
-    .glass > div{
-        margin-top: 4em;
-    }
-     nav{
-        left: 55px;
-        top: 13px;
+    #box2{
+        width:auto;
+        height: auto;
+        color: white;
+        font-size: 10em;
+        font-weight: 500;
+        line-height: 130px;
+        position: absolute;
+        top: 116px;
+        left: 100px;
+        overflow: hidden;
     }
 
-    .glass h2{
-        color: #fff;
-        font-size: 12px;
-        font-weight: normal;
+    #text{
+        position: relative;
+        left: -100%;
+        animation: anim3 2s forwards 3s;
     }
-}
+    @keyframes anim3{
+        from{
+            left: -100%;
+        }
+        to{
+            left: 0%;
+        }
+    }
+    #box3{
+        overflow: hidden;
+    }
+    #container{
+        width: 100%;
+        position: absolute;
+        top: -100%;
+        animation: anim4 2s forwards 2.5s;
+    }
+    #logo{
+        float: left;
+        margin-left: 100px;
+        margin-top: 20px;
+    }
+    #logo img{
+        width: 50px;
+    }
+
+    @media (max-width: 750px) {
+
+    }
