--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -16,6 +16,18 @@
                         <img src="/static/images/quiz.png">
                      </div>
                      <div class="contentBox">
+                         <br><h3>DSAII Inauguration <br><span>Inauguration of the club<br>15th September 2021</span></h3>
+                     </div>
+                    <a href="{% url 'inaug' %}"><input type="submit" value="View"></a>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBox">
+                        <img src="/static/images/quiz.png">
+                     </div>
+                     <div class="contentBox">
                          <br><h3>Quizomania<br><span>An online interactive quiz<br>2nd October 2021</span></h3>
                      </div>
                     <a href="{% url 'quiz' %}"><input type="submit" value="View"></a>
