--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -4,13 +4,9 @@
 <link rel="stylesheet" href="{% static 'events.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
-<body>
-<div class="container" style="text-align: center; color: white;">
-    <h1 style="font-weight: bold;">EVENTS</h1>
-</div>
-    <section>
-        <div class="container">
-            <div class="card">
+    <h1 style="color: white; font-weight; 900; text-align: center;">EVENTS</h1>
+    <div class="container" >
+    <div class="card">
                 <div class="content">
                     <div class="imgBox">
                         <img src="/static/images/quiz.png">
@@ -46,10 +42,7 @@
                 </div>
 
             </div>
-        </div>
-    </section>
-<br>
-<br>
-</body>
+</div>
+</div>
 
 {% endblock %}
