--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
-    <div class="container" style="text-align: center;">
-      <h1 style="font: revert;font-size: xxx-large; color: white;">TEAM</h1>
-    </div>
 <link
   rel="stylesheet"
   href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
@@ -13,6 +10,7 @@
 <link rel="stylesheet" href="{% static 'team.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
+<h1 style="color: white; font-weight: 900; text-align: center;">TEAM</h1>
 
 
         <div class="container" style="top: 187px;">
