--- a/static/team.css
+++ b/static/team.css
@@ -35,6 +35,7 @@ section::before{
     align-items: center;
     flex-wrap: wrap;
     margin: 40px 0;
+    left: 200px;
 }
 
 .container .card{
@@ -144,3 +145,8 @@ input[type="submit"]:hover{
     background: #c0392b;
     }
 
+@media (max-width: 750px) {
+    .container{
+            left: 0px;
+    }
+    }
