--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -13,7 +13,7 @@
 <h1 style="color: white; font-weight: 900; text-align: center;">TEAM</h1>
 
 
-        <div class="container" style="top: 187px;">
+        <div class="container" >
 
 
             <div class="card">
