--- a/dsaii/templates/footer.html
+++ b/dsaii/templates/footer.html
@@ -1,3 +1,4 @@
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <footer class="page-footer font-small transparent fixed-bottom">
   <div class="footer-copyright text-center py-3">
     <!-- <a href="http://localhost:8000">Admin</a> -->
@@ -6,5 +7,3 @@
 
   </div>
 </footer>
-
-
