--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -3,20 +3,7 @@
  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
  <script  src="./script.js"></script>
 
-<div class="container" style="width: 400px;
-    height: 550px;
-    content: "";
-    position: absolute;
-    top: -25px;
-    left: -25px;
-    bottom: 0;
-    right: 0;
-    background: inherit;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255 , 255, 0.18);">
+<div class="container" >
     <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;
     position: absolute;
     left: 41%;
