--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -1,5 +1,5 @@
     {% load static %}
-
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <nav class="navbar navbar-expand-lg navbar-dark transparent" style="width: 100%; background: hs1(0 0% 100% / 0.1);">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -23,9 +23,97 @@
     </ul>
 
   </div>
+  <div class="menu">
+                    <ul class ="social media" >
+                        <li style="color: white;">
+                            <a href="https://www.instagram.com/dsaii.dit/" class="media-icon">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li style="color: white;">
+                            <a href="#" class="media-icon">
+                                <i class="fab fa-google"></i>
+                            </a>
+                        </li>
+                        <li style="color: white;">
+                            <a href="https://github.com/dsaii" class="media-icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li style="color: white;">
+                            <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7" class="media-icon">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                        </li>
+                        <li style="color: white;">
+                            <a href="https://discord.gg/HUV8K3pBqG" class="media-icon">
+                                <i class="fab fa-discord"></i>
+                            </a>
+                        </li>
+                        <li style="color: white;">
+                            <a href="https://t.me/dsaiidit" class="media-icon">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </li>
+
+
+                    </ul>
+
+  </div>
 </nav>
     <style>
       .navbar{
         flex-wrap: unset;
       }
+
+
+nav{
+    z-index: 99;
+    position: relative;
+    transition: 0.4s;
+}
+
+nav a{
+    text-decoration: none;
+    color: #1f1f1f;
+}
+
+nav .container{
+    max-width: 1150px;
+    padding: 1em 2em;
+    margin: 0 auto;
+}
+
+nav .menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: content-box;
+}
+
+nav ul{
+    list-style-type: none;
+    padding: 0;
+    display: inline-block;
+}
+
+nav ul li{
+    display: inline-block;
+    margin: 0 0.5em;
+
+}
+
+nav ul a{
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+
+nav .container .menu-btn{
+    display: none;
+}
+
+.social-media a{
+    font-size: 1em;
+}
+
     </style>
