--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -25,34 +25,34 @@
   </div>
   <div class="menu">
                     <ul class ="social media" >
-                        <li style="color: white;">
+                        <li>
                             <a href="https://www.instagram.com/dsaii.dit/" class="media-icon">
-                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-instagram" style="color: white;"></i>
                             </a>
                         </li>
-                        <li style="color: white;">
+                        <li>
                             <a href="#" class="media-icon">
-                                <i class="fab fa-google"></i>
+                                <i class="fab fa-google" style="color: white;"></i>
                             </a>
                         </li>
-                        <li style="color: white;">
+                        <li>
                             <a href="https://github.com/dsaii" class="media-icon">
-                                <i class="fab fa-github"></i>
+                                <i class="fab fa-github" style="color: white;"></i>
                             </a>
                         </li>
-                        <li style="color: white;">
+                        <li>
                             <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7" class="media-icon">
-                                <i class="fab fa-whatsapp"></i>
+                                <i class="fab fa-whatsapp" style="color: white;"></i>
                             </a>
                         </li>
-                        <li style="color: white;">
+                        <li >
                             <a href="https://discord.gg/HUV8K3pBqG" class="media-icon">
-                                <i class="fab fa-discord"></i>
+                                <i class="fab fa-discord" style="color: white;"></i>
                             </a>
                         </li>
-                        <li style="color: white;">
+                        <li >
                             <a href="https://t.me/dsaiidit" class="media-icon">
-                                <i class="fab fa-telegram"></i>
+                                <i class="fab fa-telegram" style="color: white;"></i>
                             </a>
                         </li>
 
