--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -14,6 +14,47 @@
 
 
         <div class="container" >
+            <h2 style="color: white;">Vision</h2><p style="color: white;">
+                    • Empowerment
+through Knowledge!
+<br>• Our vision is to create a
+community that
+innovates and explores
+AI&DS.
+<br>• We intent to make
+every student feel
+confident about their
+work and elevate their
+communication skill.
+<br>Our aim is to
+motivate
+students to share
+their ideas and
+provide a platform
+for research
+purposes.
+<br>• Acting as a
+platform where all
+the branches unite,
+connect and work together.</p>
+
+
+
+            <h2 style="color: white;">Mission</h2><p style="color: white;">
+
+                    Dedicated efforts for confidence boosting.
+Yearning to promote research and skill
+enhancement.
+Persistent endeavor to imbibe practical
+knowledge.
+Inculcating the concept of Artificial
+Intelligence & Data Science.
+Treading the path to meet the future
+challenges
+Motivating and guiding students to participate
+in various research and development activities.
+Exposing the participants to practical and
+            competitive environment to enhance their skill.</p>
 
 
             <div class="card">
