--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -9,7 +9,7 @@
     <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/images/quiz.png">
+                        <img src="/static/inaug.png">
                      </div>
                      <div class="contentBox">
                          <br><h3>DSAII Inauguration <br><span>Inauguration of the club<br>15th September 2021</span></h3>
