--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -3,10 +3,10 @@
  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
  <script  src="./script.js"></script>
 
-<div class="container" >
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;
+<div class="parent-div" >
+    <div class="container" style="color: white;text-align: center;
     position: absolute;
-    left: 41%;
+    left: 50%;
     top: 46%;
     transform: translate(-50%, -50%);
 background: rgba(255, 255, 255, 0.25);
@@ -19,13 +19,19 @@ border-radius: 15px;">
 <ul >
 {% for post in object_list %}
 
-    <li style="font-size: x-large;font-weight: 400;" ><a href = "{% url 'article' post.pk %}"  style="font-size: x-large; color : white;">{{post.title}}</a> - {{post.author.first_name}} <br/>
+    <li style="font-size: x-large;font-weight: 400;" ><a href = "{% url 'article' post.pk %}"  style="font-size: x-large; color : white;">{{post.title}}</a> <br/>
     </li>
 {% endfor %}
 </ul>
 </div>
 </div>
 
-
+<style>
+    @media (max-width: 750px){
+        .col-md-8 col-sm-12 offset-md-1 p-4 text-center{
+            left: 50%;
+        }
+    }
+</style>
 
 {% endblock %}
