--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -33,12 +33,14 @@
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="webdev.png">
+                         <img src="/static/chlogo1.png">
+
                      </div>
                      <div class="contentBox">
-                         <br><h3>Coming Soon<br><span><br></span></h3>
+                         <br><h3>Coding Hour<br><span>A coding/programming competition <br>4th December 2021</span></h3>
                      </div>
-                    <br>
+                                        <a href="{% url 'codhr' %}"><input type="submit" value="View"></a>
+
                 </div>
 
             </div>
