--- a/dsaii/templates/inauguration.html
+++ b/dsaii/templates/inauguration.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
 <div class="container" style="color: white;text-align: center; font-size: larger;">
-    <br><br><h1 style="font-weight: 900;"> DSAII Inauguration</h1><br><br>
-    <h2 style="font-weight: 900;">Introduction</h2>
+    <br><br><h1 style="font-weight: 900;"> DSAII Inauguration</h1><br>
+    <h2 style="font-weight: 500;">Introduction</h2>
     <p>
-DSAII INAUGURATION REPORT<br>
 Name of event: DSAII INAUGURATION<br>
 Date of event: 15/9/21<br>
 Platform for event: ZOOM<br>
@@ -70,14 +69,14 @@ Number of attendees: 200</p><br><br>
         </div>
       </div>
 </div>
-    <br><br><h2 style="font-weight: 900;">The Event</h2>
+    <br><br><h2 style="font-weight: 500;">The Event</h2>
     <p>The 15th of September was a memorable day for not only being considered as Engineer’s Day, but
 also as the day of the inauguration of the DSAII club, a club which is devoted to the deep study of
 artificial intelligence and data science, and is the newest addition to our college’s vast array of clubs.
 An idea for a club turned reality by the grit and tenacity of its founding members is quite literally a
-club by the students, and for the students.<br>
+club by the students, and for the students.<br><br>
 The event was organized by the AI&DS department in the presence of the institute’s prestigious faculty. The event was led and executed successfully under the guidance of Prof. Subhangi Suryawanshi
-and Prof. Dheeraj Agrawal.<br>
+and Prof. Dheeraj Agrawal.<br><br>
 Learning through practical experience being one of the core tenants of the club, it aims to amplify
 the students’ skills as well as their team work. The event was an insightful one as it gave a background
 of the various fields included in Artificial Intelligence and Data Science by the core members.<br>
@@ -88,10 +87,10 @@ Where is AI used?<br>
 What is Data Science(DS)?<br>
 Does DS use AI, ML, DL?<br>
 were answered during the introduction of the club followed by talking about the future scope of the
-department.<br>
+department.<br><br>
 A virtual voice assistant designed by a fellow member as well as a video of an AI playing hide and
 seek were used as examples of many of the applications of Artificial Intelligence and Data Science.
-The event was an interactive one, answering many of the questions of the attendees.<br>
+The event was an interactive one, answering many of the questions of the attendees.<br><br>
 The team of DSAII feels immense pride in organising an event that can only be considered successful, and would also like to convey our thanks to the principal and the management for their timely
 advice and co-operation on the launching of the club.</p><br><br><br><br><br>
 </div>
