--- a/dsaii/templates/quiz.html
+++ b/dsaii/templates/quiz.html
@@ -1,4 +1,79 @@
 {% extends 'base.html' %} {% block content %}
  {% load static %}
+<div class="container" style="color: white;text-align: center; font-size: larger;">
+    <br><br><h1 style="font-weight: 900;">QUIZOMANIA<br>
+(Battle of the erudites)</h1><br>
+    <h2 style="font-weight: 500;">Introduction</h2>
+    <p>
+Name of event: Quizomania<br>
+Date of event: 2/10/21<br>
+Platform for event: Google meet<br>
+Number of attendees: 50
+</p><br><br>
+<div class="container">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script>
+        window.initializeCarousel = () => {
+          $("#carouselExampleSlidesOnly").carousel({ interval: 300 })
+        }
+      </script>
+      <style type="text/css">
+        .carousel-inner img {
+          height: 514px;
+        }
+        @media (max-width: 750px) {
+            .carousel-inner img {
+              height: 255px;
+            }
+        }
+      </style>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/static/q (1).png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/q31.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/q32.png" class="d-block w-100" alt="...">
+          </div>
+            <div class="carousel-item">
+            <img src="/static/q33.png" class="d-block w-100" alt="...">
+          </div>
+            <div class="carousel-item">
+            <img src="/static/q1.png" class="d-block w-100" alt="...">
+          </div>
+            <div class="carousel-item">
+            <img src="/static/q2.png" class="d-block w-100" alt="...">
+          </div>
+
+        </div>
+      </div>
+</div>
+    <br><br><h2 style="font-weight: 500;">The Event</h2>
+    <p>
+       Quizomania an intra college quiz competition was organized by the DSAII Club on the occasion
+of Gandhi Jayanti to encourage the students widen their knowledge in the vast field of python
+and problem solving. It was an individual event with three rounds. The questions were cleverley
+framed and perfectly covered every topics that comes under the set of python and problem
+solving.<br><br>
+Due to the pandemic the quiz was conducted online but it still didn't stop the members from
+hosting such a successful and interactive event.50 students of second year represented their
+respective branches which proved that having a knowledge of AI is not limited to the computer
+science branch.<br><br>
+The preliminary round started at 11am and was open for 20 mins. students were selected for the
+second round. The second round started at 11:30 am and was open for 20 mins. 6 students
+qualified for the final round. Top two were awarded as winners. The first prize winner was
+Prathamesh Patil of second year and second prize winner was Subham Kardel of second year .
+Overall, the Quiz competition was a huge success.<br><br>
+The team of DSAII feels immense pride in organising an event that can only be considered
+successful, and would also like to convey our thanks to the principal, the HOD Professor
+Santosh Chobe, Traning and Placement professor Dheeraj Agarwal and professor Subhangi
+Suryawanshi for their timely advice and co-operation on the launching of the club.
+    </p>
+
+    <br><br><br><br><br>
+</div>
 
 {% endblock %}
