--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -28,8 +28,8 @@ border-radius: 15px;">
 
 <style>
     @media (max-width: 750px){
-        .col-md-8 col-sm-12 offset-md-1 p-4 text-center{
-            left: 50%;
+        .container .ul .li .a{
+            font-size: small;
         }
     }
 </style>
