--- a/dsaii/templates/quiz.html
+++ b/dsaii/templates/quiz.html
@@ -72,7 +72,7 @@ successful, and would also like to convey our thanks to the principal, the HOD P
 Santosh Chobe, Traning and Placement professor Dheeraj Agarwal and professor Subhangi
 Suryawanshi for their timely advice and co-operation on the launching of the club.
     </p>
-
+<p><a href="https://drive.google.com/drive/folders/1Oh3fvwVI8h0n2DfcRpC3-ww71WlUKn6V?usp=sharing">Download the questions here</a></p>
     <br><br><br><br><br>
 </div>
 
