--- a/dsaii/templates/quiz.html
+++ b/dsaii/templates/quiz.html
@@ -21,9 +21,24 @@ Number of attendees: 50
         .carousel-inner img {
           height: 514px;
         }
+        .blah{
+            display: inline-flex;
+            gap: 59px;
+        }
+        .blah img{
+            height:288px;
+        }
         @media (max-width: 750px) {
             .carousel-inner img {
               height: 255px;
+            }
+            .blah {
+                display: flex;
+                justify-content: center;
+                gap: 12px;
+            }
+            .blah img{
+                height: 160px;
             }
         }
       </style>
@@ -66,7 +81,12 @@ The preliminary round started at 11am and was open for 20 mins. students were se
 second round. The second round started at 11:30 am and was open for 20 mins. 6 students
 qualified for the final round. Top two were awarded as winners. The first prize winner was
 Prathamesh Patil of second year and second prize winner was Subham Kardel of second year .
-Overall, the Quiz competition was a huge success.<br><br>
+        Overall, the Quiz competition was a huge success.</p><br>
+    <div class="blah">
+        <img src="/static/win2.png" >
+        <img src="/static/win1.png" >
+    </div>
+    <br><br><p>
 The team of DSAII feels immense pride in organising an event that can only be considered
 successful, and would also like to convey our thanks to the principal, the HOD Professor
 Santosh Chobe, Traning and Placement professor Dheeraj Agarwal and professor Subhangi
