--- a/static/events.css
+++ b/static/events.css
@@ -150,4 +150,7 @@ input[type="submit"]:hover{
     .container{
             left: 0px;
     }
+    .container .card .content{
+        opacity: 1;
+    }
     }
