--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="{% static 'team.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
-<h1 style="color: white; font-weight: 900; text-align: center;">TEAM</h1>
+<h1 style="color: white; font-weight: 900; text-align: center;"><br>TEAM</h1>
 
 
         <div class="container" >
