--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'events.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
-    <h1 style="color: white; font-weight: 900; text-align: center;">EVENTS</h1>
+    <h1 style="color: white; font-weight: 900; text-align: center;"><br>EVENTS</h1>
     <div class="container" >
         <div class="card">
                 <div class="content">
