--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -116,14 +116,15 @@
 
 
           #text{
-            font-size: xxx-large;
+            font-size: xx-large;
             position: relative;
             animation: anim3 2s forwards 3s;
+            text-align: center;
     }
             #box1{
         width: 353px;
             height: 275px;
-        background: url('/static/bgbw.png') ;
+        background: none ;
         position: absolute;
         bottom: -100%;
         left:30%;
@@ -135,7 +136,7 @@
             width: 353px;
             height: 200px;
             top: 0px;
-            background: url(/static/bgnorsmall.png);
+            background: none;
             left: 30%;
             z-index: -1;
     }
